deploying small change to see if it fixes the repo list collapse on mobile

--- a/assets/scss/_dashboard.scss
+++ b/assets/scss/_dashboard.scss
@@ -276,6 +276,9 @@
     .reposlist {
       & ul {
         flex-direction: column;
+        li {
+          display: flex;
+        }
       }
     }
   }
